--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="cd7699">  <td>20/02/21 14:52:57</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GoogleTitleTest.googleTitleTest()[pri:0, instance:com.java.testing.youtube.GoogleTitleTest@757277dc]">googleTitleTest</td> 
-  <td>main@1785397234</td>   <td></td> </tr>
-<tr bgcolor="cd7699">  <td>20/02/21 14:52:43</td>   <td>-13339</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;GoogleTitleTest.setUp()[pri:0, instance:com.java.testing.youtube.GoogleTitleTest@757277dc]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1785397234</td>   <td></td> </tr>
-<tr bgcolor="cd7699">  <td>20/02/21 14:52:57</td>   <td>47</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;GoogleTitleTest.tearDown()[pri:0, instance:com.java.testing.youtube.GoogleTitleTest@757277dc]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1785397234</td>   <td></td> </tr>
+<tr bgcolor="7caf88">  <td>20/02/28 20:56:26</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="infintLoopTest.test1()[pri:0, instance:com.java.testing.youtube.infintLoopTest@1dac5ef]">test1</td> 
+  <td>main@1301352406</td>   <td></td> </tr>
 </table>
