--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,6 +1,36 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="cd7699">  <td>20/02/21 09:21:55</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="understandtestng.testng()[pri:0, instance:com.java.testing.youtube.understandtestng@71e9ddb4]">testng</td> 
-  <td>main@773662650</td>   <td></td> </tr>
+<tr bgcolor="7caf88">  <td>20/02/28 22:09:42</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestNgBasics.closeBrowser()[pri:0, instance:com.java.testing.youtube.TestNgBasics@21b2e768]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1210830415</td>   <td></td> </tr>
+<tr bgcolor="7caf88">  <td>20/02/28 22:09:42</td>   <td>23</td> <td>&nbsp;</td><td title="&lt;&lt;TestNgBasics.delteAllCookies()[pri:0, instance:com.java.testing.youtube.TestNgBasics@21b2e768]">&lt;&lt;delteAllCookies</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1210830415</td>   <td></td> </tr>
+<tr bgcolor="7caf88">  <td>20/02/28 22:09:42</td>   <td>-79</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestNgBasics.enterURL()[pri:0, instance:com.java.testing.youtube.TestNgBasics@21b2e768]">&gt;&gt;enterURL</td> 
+<td>&nbsp;</td>  <td>main@1210830415</td>   <td></td> </tr>
+<tr bgcolor="7caf88">  <td>20/02/28 22:09:42</td>   <td>-51</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestNgBasics.enterURL()[pri:0, instance:com.java.testing.youtube.TestNgBasics@21b2e768]">&gt;&gt;enterURL</td> 
+<td>&nbsp;</td>  <td>main@1210830415</td>   <td></td> </tr>
+<tr bgcolor="7caf88">  <td>20/02/28 22:09:42</td>   <td>-41</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestNgBasics.enterURL()[pri:0, instance:com.java.testing.youtube.TestNgBasics@21b2e768]">&gt;&gt;enterURL</td> 
+<td>&nbsp;</td>  <td>main@1210830415</td>   <td></td> </tr>
+<tr bgcolor="7caf88">  <td>20/02/28 22:09:42</td>   <td>186</td> <td title="&lt;&lt;TestNgBasics.generateTestReport()[pri:0, instance:com.java.testing.youtube.TestNgBasics@21b2e768]">&lt;&lt;generateTestReport</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1210830415</td>   <td></td> </tr>
+<tr bgcolor="7caf88">  <td>20/02/28 22:09:42</td>   <td>-77</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNgBasics.googleLogoTest()[pri:0, instance:com.java.testing.youtube.TestNgBasics@21b2e768]">googleLogoTest</td> 
+  <td>main@1210830415</td>   <td></td> </tr>
+<tr bgcolor="7caf88">  <td>20/02/28 22:09:42</td>   <td>-50</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNgBasics.googleTitleTest()[pri:0, instance:com.java.testing.youtube.TestNgBasics@21b2e768]">googleTitleTest</td> 
+  <td>main@1210830415</td>   <td></td> </tr>
+<tr bgcolor="7caf88">  <td>20/02/28 22:09:41</td>   <td>-153</td> <td>&nbsp;</td><td title="&gt;&gt;TestNgBasics.lanuchBrowser()[pri:0, instance:com.java.testing.youtube.TestNgBasics@21b2e768]">&gt;&gt;lanuchBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1210830415</td>   <td></td> </tr>
+<tr bgcolor="7caf88">  <td>20/02/28 22:09:42</td>   <td>-53</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestNgBasics.logOut()[pri:0, instance:com.java.testing.youtube.TestNgBasics@21b2e768]">&lt;&lt;logOut</td> 
+<td>&nbsp;</td>  <td>main@1210830415</td>   <td></td> </tr>
+<tr bgcolor="7caf88">  <td>20/02/28 22:09:42</td>   <td>-45</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestNgBasics.logOut()[pri:0, instance:com.java.testing.youtube.TestNgBasics@21b2e768]">&lt;&lt;logOut</td> 
+<td>&nbsp;</td>  <td>main@1210830415</td>   <td></td> </tr>
+<tr bgcolor="7caf88">  <td>20/02/28 22:09:42</td>   <td>-29</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestNgBasics.logOut()[pri:0, instance:com.java.testing.youtube.TestNgBasics@21b2e768]">&lt;&lt;logOut</td> 
+<td>&nbsp;</td>  <td>main@1210830415</td>   <td></td> </tr>
+<tr bgcolor="7caf88">  <td>20/02/28 22:09:42</td>   <td>-121</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestNgBasics.login()[pri:0, instance:com.java.testing.youtube.TestNgBasics@21b2e768]">&gt;&gt;login</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1210830415</td>   <td></td> </tr>
+<tr bgcolor="7caf88">  <td>20/02/28 22:09:42</td>   <td>-41</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNgBasics.searchTest()[pri:0, instance:com.java.testing.youtube.TestNgBasics@21b2e768]">searchTest</td> 
+  <td>main@1210830415</td>   <td></td> </tr>
+<tr bgcolor="7caf88">  <td>20/02/28 22:09:41</td>   <td>-165</td> <td title="&gt;&gt;TestNgBasics.setUp()[pri:0, instance:com.java.testing.youtube.TestNgBasics@21b2e768]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1210830415</td>   <td></td> </tr>
+<tr bgcolor="6cb480">  <td>20/02/28 22:09:42</td>   <td>13</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="understandtestng.testng()[pri:0, instance:com.java.testing.youtube.understandtestng@57250572]">testng</td> 
+  <td>main@1210830415</td>   <td></td> </tr>
 </table>
